# Data-Engineering

./: Dockerfile  README.md  pyproject.toml  start.sh
Extract/Comment/: main.py  儲存.py  抓評論.py  讀取商家.py
Extract/StoreList/: 士林夜市小吃攤.py  士林夜市攤販.py  士林夜市甜點.py  士林夜市美食.py  士林夜市飲料店.py  士林夜市餐廳.py
Load/StoreList/: 合併後的資料.csv  士林夜市小吃攤.csv  士林夜市飲料店.csv
Peter/Data/Comment/: 全部評論.csv
Peter/Data/StoreList/: 去掉重複後的資料.csv  士林夜市攤販.csv  士林夜市甜點.csv  士林夜市美食.csv  士林夜市餐廳.csv
Peter/Peter-clean/: Merge_remove_duplicates.ipynb
Peter/Peter-crawler/Comment/: main.py  儲存.py  抓評論.py
Peter/Peter-crawler/StoreList/: 士林夜市小吃攤.py  士林夜市攤販.py  士林夜市甜點.py  士林夜市飲料店.py  士林夜市餐廳.py
Transform/: Merge_remove_duplicates.ipynb
